<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_background"
    tools:context=".ui.SplashActivity">

    <!-- Background gradient overlay -->
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_overlay" />

    <!-- Logo container -->
    <androidx.cardview.widget.CardView
        android:id="@+id/logoContainer"
        android:layout_width="@dimen/splash_logo_size"
        android:layout_height="@dimen/splash_logo_size"
        android:layout_marginBottom="@dimen/spacing_xxl"
        app:cardCornerRadius="@dimen/corner_radius_xl"
        app:cardElevation="@dimen/elevation_lg"
        app:cardBackgroundColor="@color/surface"
        app:layout_constraintBottom_toTopOf="@+id/appNameText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <ImageView
            android:id="@+id/logoImage"
            android:layout_width="@dimen/icon_size_xl"
            android:layout_height="@dimen/icon_size_xl"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_launcher_foreground"
            android:scaleType="centerCrop" />

    </androidx.cardview.widget.CardView>

    <!-- App name -->
    <TextView
        android:id="@+id/appNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_lg"
        android:layout_marginBottom="@dimen/spacing_sm"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.ChotuJobs.HeadlineLarge"
        android:textColor="@color/on_primary"
        android:fontFamily="sans-serif-medium"
        app:layout_constraintBottom_toTopOf="@+id/taglineText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoContainer" />

    <!-- Tagline -->
    <TextView
        android:id="@+id/taglineText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_xl"
        android:layout_marginBottom="@dimen/spacing_xxxl"
        android:text="@string/app_tagline"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        android:textColor="@color/on_primary_container"
        android:textAlignment="center"
        android:alpha="0.8"
        app:layout_constraintBottom_toTopOf="@+id/loadingIndicator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appNameText" />

    <!-- Loading indicator -->
    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/loadingIndicator"
        android:layout_width="@dimen/progress_size_lg"
        android:layout_height="@dimen/progress_size_lg"
        android:layout_marginBottom="@dimen/spacing_xxxl"
        android:indeterminate="true"
        app:indicatorColor="@color/on_primary"
        app:trackColor="@color/primary_container"
        app:trackThickness="4dp"
        app:layout_constraintBottom_toTopOf="@+id/versionText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taglineText" />

    <!-- Version info -->
    <TextView
        android:id="@+id/versionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_xl"
        android:text="@string/version_info"
        android:textAppearance="@style/TextAppearance.Material3.BodySmall"
        android:textColor="@color/on_primary_container"
        android:alpha="0.6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loadingIndicator" />

</androidx.constraintlayout.widget.ConstraintLayout>
